<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context="mateusz.snake.MainActivity">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_choose"
            android:id="@+id/textView"
            android:textColor="#FFFFFF"
            android:layout_weight="2"
            android:gravity="left"
            android:textAlignment="gravity"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_choose"
            android:id="@+id/textView2"
            android:textColor="#FFFFFF"
            android:layout_weight="2"
            android:gravity="right"
            android:textAlignment="gravity"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="left"
            android:textAlignment="gravity"
            android:id="@+id/radio_color">
            <RadioButton
                android:id="@+id/button_green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/green"
                android:textColor="#00FF00"
                android:checked="true"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:id="@+id/button_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red"
                android:textColor="#F00"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:id="@+id/button_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blue"
                android:textColor="#0000FF"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/start_game_button"
            android:id="@+id/button2"
            android:onClick="startGame"
            android:layout_weight="0.3"
            android:layout_gravity="center_horizontal" />
        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="right"
            android:textAlignment="gravity"
            android:id="@+id/radio_difficulty">
            <RadioButton
                android:id="@+id/button_easy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/easy_mode"
                android:textColor="#FFFFFF"
                android:checked="true"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:id="@+id/button_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium_mode"
                android:textColor="#FFFFFF"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:id="@+id/button_hard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hard_mode"
                android:textColor="#FFFFFF"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/snake_logo_with_text"
        android:layout_weight="10"
        android:id="@+id/imageView3" />

</LinearLayout>
